--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   firebase_auth: ^5.2.0
-
+  supabase_flutter: ^2.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
