--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   provider: ^6.0.0
   firebase_auth: ^5.2.0
   supabase_flutter: ^2.0.0
-  
+  table_calendar: ^3.0.9
+  mask_text_input_formatter: ^2.4.0
+  flutter_time_picker_spinner: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
