--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   http: ^0.13.3
   english_words: ^4.0.0
   provider: ^6.0.0
+  firebase_core: ^3.14.0
   firebase_auth: ^5.2.0
   supabase_flutter: ^2.0.0
   table_calendar: ^3.0.9
